# playwright_python_pytest

./: .gitignore  README.md  conftest.py  first_non_repeating_char.py  index.html  package-lock.json  package.json  pyproject.toml  test_pytest_basic_tuples.py
.github/workflows/: playwright.yml
38/: index.html
38/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
38/export/: influxDbData.txt
38/history/: categories-trend.json
38/widgets/: executors.json  history-trend.json  retry-trend.json  severity.json  summary.json
39/: index.html
39/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
39/export/: influxDbData.txt
39/history/: duration-trend.json  history.json
39/widgets/: categories-trend.json  duration.json  executors.json  history-trend.json  retry-trend.json  summary.json
40/: index.html
40/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
40/export/: influxDbData.txt  prometheusData.txt
last-history/: duration-trend.json  history.json
non_pytest_tests/: playwright_basic.py  playwright_recorded.py
pages/: github_login_page.py
tests/: conftest.py  test_GH_auth.py  test_GH_auth_with_PO.py  test_api.py  test_download.py  test_emulation.py  test_events.py  test_frames.py  test_inputs.py  test_playwright_basic.py  test_playwright_pytest.py  test_playwright_pytest_basic.py  test_playwright_pytest_with_tracing.py  test_playwright_recorded.py  test_pytest_basic.py  test_pytest_basic_tuples.py  test_pytest_basic_tuples_2.py  test_skip_browser.py  test_unit.py
(+12 files in other folders)
